--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "@types/node": "^16.11.14",
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
+    "@types/react-router": "^5.1.17",
     "react": "^17.0.2",
-
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
     "react-vertical-timeline-component": "^3.5.2",
