--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
     "@types/react-router": "^5.1.17",
+    "@types/react-router-dom": "^5.3.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "react-vertical-timeline-component": "^3.5.2",
     "sass": "^1.45.0",
